--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>My Resume</title>
 </head>
 <body>
+<div id="page-wrapper">
 <nav id="main-nav">
       <ul>
         <li><a href="index.html">Professional Resume</a></li>
@@ -68,5 +69,6 @@ During my life, I had many experiences that made me who I am today. I like to do
 
 
 <img src="image/Weridness.inc logo.png" alt="my personal logo" />
+ </div>
 </body>
 </html>
