--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>My Resume</title>
 </head>
 <body>
-<div id="wrapper">
+<div id="page-wrapper">
 <nav id="main-nav">
       <ul>
         <li><a href="index.html">Professional Resume</a></li>
