--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>My Resume</title>
+  <link rel="stylesheet" href="css/lab6_final.css">
 </head>
 <body>
 
