--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <nav id="main-nav">
-<div class="myDiv">
+<div id="page-wrapper">
       <ul>
         <li><a href="index.html">Professional Resume</a></li>
         <li><a href="page2.html">Things i made</a></li>
