--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>My Resume</title>
-  <link rel="stylesheet" href="css/lab6_final.css">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -71,6 +71,6 @@ During my life, I had many experiences that made me who I am today. I like to do
 
 
 <img src="image/Weridness.inc logo.png" alt="my personal logo" />
-</div>
+
 </body>
 </html>
