--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="css/lab6_final.css" />
 </head>
 <body>
-
+<div id="page-wrapper">
 <nav id="main-nav">
 
       <ul>
@@ -71,6 +71,6 @@ During my life, I had many experiences that made me who I am today. I like to do
 
 
 <img src="image/Weridness.inc logo.png" alt="my personal logo" />
-
+</div>
 </body>
 </html>
