--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="css/lab6_final.css" />
 </head>
 <body>
-<div id="page-wrapper">
+<div id="mainbodybox">
 <nav id="main-nav">
 
       <ul>
