--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="css/lab6_final.css" />
 </head>
 <body>
-<div class="div1">
+
 <nav id="main-nav">
 
       <ul>
@@ -28,11 +28,12 @@
     </tr>
 
   </table>
+  <div class="myDiv">
   <h2><em>Who am I</em></h2>
    <p>Hello, my name is Courtland, I am a Undergraded at Illinois Institute of Technology and I’m 18 years old. 
 During my life, I had many experiences that made me who I am today. I like to do many things like playing video games, watching T.V., and cooking. One of my favorite things to do is playing video games and that made me want to become a videogame designer. My school life has been very interesting and i have been having a wild experiance, but it was very fun. 
    </p>
-
+</div>
 
   <p><strong>Skills:</strong></p>
   <ul>
@@ -71,6 +72,6 @@ During my life, I had many experiences that made me who I am today. I like to do
 
 
 <img src="image/Weridness.inc logo.png" alt="my personal logo" />
-</div>
+
 </body>
 </html>
