--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Things i made</title>
+  <link rel="stylesheet" type="text/css" href="css/page 2.css" />
 </head>
 
 <body>
@@ -29,8 +30,6 @@
        <p><a href="https://scratch.mit.edu/projects/813896715">Zack vs Carl</a></p>
 	   
 <h1>I made this </h1>       
-
-
 <img src="image/2023 logo.png" alt="a real life Dragonballl rader concept " />
 
 
