--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Things i made</title>
-
+<link rel="stylesheet" type="text/css" href="css/page 2.css" />
 </head>
 
 <body>
