--- a/page3.html
+++ b/page3.html
@@ -13,11 +13,13 @@
      <li><a href="page3.html">Random Things</a></li>
       </ul>
 	  </nav>
+	  <div class="myDiv">
   <h1>Random things</h1>
   <h2>video i made </h2>
   <video width="400" controls>
   <source src="videos/theme song (final) version 3 (1).mp4" type="video/mp4">  
   </video>
+  </div>
   
   <h2><em>My favorite foods</em></h2>
     
