--- a/page3.html
+++ b/page3.html
@@ -20,23 +20,22 @@
   <source src="videos/theme song (final) version 3 (1).mp4" type="video/mp4">  
   </video>
   </div>
-  
+  <div class="myDiv2">
   <h2><em>My favorite foods</em></h2>
-    
-
   <ul>
     <li><strong>Corn</strong></li>
     <li><strong>Burgers</strong></li>
     <li><strong>Pizza</strong></li>
   </ul>
+  </div>
+  <div class="myDiv3">
   <h2><em>Bad resturnaunt idea</em></h2>
   <p>It a fancy expensive resturnaunt that only sells food from the kids menu like grilled cheese, dino nuggets, and mac and cheese.the way we justify it is by using only the most fresh and expensive ingredients. so we can charge a lot of money for a simple dish</p>
   <h2><em>Game idea</em></h2>
   <p> it is a action adventure game, but every chapter it changes gameplay depending on character the chapter forcus on. for example the game starts like a nor action adventure game and after beating the frist chapter you meet a mage who joins you and now the game is a rpg, the next chapter you meet a cowboy and he joins your party now the game is a frist person shooter, and so on and so on </p>
     <h2><em>A picture of corn</em></h2>
+	</div>
 	<img src="image/corn.png" alt="it just corn" />
-  
-
 </body>
 </html>
 
