--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 <link rel="stylesheet" type="text/css" href="css/lab6_final.css" />
 </head>
 <body>
-<nav id="main-nav">
+<nav id="main-navbar">
+        <div id="navbar-container">
       <ul>
         <li><a href="index.html">Professional Resume</a></li>
         <li><a href="page2.html">Things i made</a></li>
      <li><a href="page3.html">Random Things</a></li>
       </ul>
 	  </nav>
+	  </div>
 	  <div class="myDiv">
   <h1>Professional Resume</h1>
   <table>
