--- a/page3.html
+++ b/page3.html
@@ -3,14 +3,16 @@
   <head>
   <meta charset="utf-8">
   <title>Random things</title>
-  <link rel="stylesheet" type="text/css" href="css/page 3.css" />
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-  <nav id="main-nav">
+        <nav id="main-navbar">
+        <div id="navbar-container">
       <ul>
         <li><a href="index.html">Professional Resume</a></li>
         <li><a href="page2.html">Things i made</a></li>
      <li><a href="page3.html">Random Things</a></li>
+	 </div>
       </ul>
 	  </nav>
 	  <div class="myDiv">
