--- a/page2.html
+++ b/page2.html
@@ -3,16 +3,18 @@
 <head>
   <meta charset="utf-8">
   <title>Things i made</title>
-<link rel="stylesheet" type="text/css" href="css/page 2.css" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
  <header id="header">
     </header>
-<nav id="main-nav">
+      <nav id="main-navbar">
+        <div id="navbar-container">
       <ul>
         <li><a href="index.html">Professional Resume</a></li>
         <li><a href="page2.html">Things i made</a></li>
      <li><a href="page3.html">Random Things</a></li>
+	 </div>
       </ul>
 	  </nav>
          <h1 style="font-family:verdana;">Things i made</h1>
