--- a/page3.html
+++ b/page3.html
@@ -3,7 +3,7 @@
   <head>
   <meta charset="utf-8">
   <title>Random things</title>
-    <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/lab6_final.css" />
   </head>
   <body>
         <nav id="main-navbar">
@@ -12,8 +12,8 @@
         <li><a href="index.html">Professional Resume</a></li>
         <li><a href="page2.html">Things i made</a></li>
      <li><a href="page3.html">Random Things</a></li>
-	 </div>
       </ul>
+	   </div>
 	  </nav>
 	  <div class="myDiv">
   <h1>Random things</h1>
