--- a/page2.html
+++ b/page2.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Things i made</title>
-    <link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/lab6_final.css" />
 </head>
 <body>
  <header id="header">
