--- a/page2.html
+++ b/page2.html
@@ -19,11 +19,13 @@
 	  </nav>
          <h1 style="font-family:verdana;">Things i made</h1>
 
-<img src="image/screenshot.png" alt="Fuseshock Acrcade game on scratch" />
+<div class="GFG"><img src="image/screenshot.png" alt="Fuseshock Acrcade game on scratch" />
        <p><a href="https://scratch.mit.edu/projects/844984046">Fuseshock Acrcade </a></p>
 <img src="image/Screenshot 2024-02-27 215143.png" alt="Zack vs Carl made useing scratch" />
-       <p><a href="https://scratch.mit.edu/projects/813896715">Zack vs Carl</a></p>  
+       <p><a href="https://scratch.mit.edu/projects/813896715">Zack vs Carl</a></p> 
+</div>	   
 <h1>I made this </h1>       
 <img src="image/2023 logo.png" alt="a real life Dragonballl rader concept " />
+
 </body>
 </html>
