total code change

--- a/page2.html
+++ b/page2.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Things i made</title>
+<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 <link rel="stylesheet" type="text/css" href="css/lab6_final.css" />
 </head>
 <body>
@@ -20,10 +21,12 @@
          <h1 style="font-family:verdana;">Things i made</h1>
 
 <div class="GFG"><img src="image/screenshot.png" alt="Fuseshock Acrcade game on scratch" />
-       <p><a href="https://scratch.mit.edu/projects/844984046">Fuseshock Acrcade </a></p>
+       <p id="rcorners2"><a href="https://scratch.mit.edu/projects/844984046">Fuseshock Acrcade </a>(This is a game i have been working on for a long time.)</p>
 <img src="image/Screenshot 2024-02-27 215143.png" alt="Zack vs Carl made useing scratch" />
-       <p><a href="https://scratch.mit.edu/projects/813896715">Zack vs Carl</a></p> 
+       <p class="p3" id="rcorners2"><a href="https://scratch.mit.edu/projects/813896715">Zack vs Carl</a>(this is the recent game i am working on)</p> 
+	   
 </div>	   
+
 <h1>I made this </h1>       
 <img src="image/2023 logo.png" alt="a real life Dragonballl rader concept " />
 
