--- a/page3.html
+++ b/page3.html
@@ -3,6 +3,7 @@
   <head>
   <meta charset="utf-8">
   <title>Random things</title>
+  <link rel="stylesheet" type="text/css" href="css/normalize.css" />
 <link rel="stylesheet" type="text/css" href="css/lab6_final.css" />
   </head>
   <body>
@@ -24,7 +25,8 @@
   </div>
   <div class="myDiv2">
 
-  <h2><em>My favorite foods</em></h2>
+  <h2 class="title"><em>My favorite foods</em></h2>
+
   <ul>
     <li><strong>Corn</strong></li>
     <li><strong>Burgers</strong></li>
@@ -32,7 +34,7 @@
   </ul>
   </div>
 <div class="RAN">
-  <h3><em>Bad resturnaunt idea</em></h3>
+  <h3 class="butterfly-kids-regular"><em>Bad resturnaunt idea</em></h3>
   <p id="para2">It a fancy expensive resturnaunt that only sells food from the kids menu like grilled cheese, dino nuggets, and mac and cheese.the way we justify it is by using only the most fresh and expensive ingredients. so we can charge a lot of money for a simple dish</p></div>
   <div class="RAN">
   <h3><em>Game idea</em></h3>
