--- a/page2.html
+++ b/page2.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Things i made</title>
 <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-<link rel="stylesheet" type="text/css" href="css/lab6_final.css" />
+<link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body>
  <header id="header">
