--- a/page3.html
+++ b/page3.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Random things</title>
   <link rel="stylesheet" type="text/css" href="css/normalize.css" />
-<link rel="stylesheet" type="text/css" href="css/style.css" />
+<link rel="stylesheet"  href="css/style.css" />
   </head>
   <body>
         <nav id="main-navbar">
