--- a/page2.html
+++ b/page2.html
@@ -20,9 +20,9 @@
 	  </nav>
          <h1 style="font-family:verdana;">Things i made</h1>
 
-<div class="GFG"><img src="image/screenshot.png" alt="Fuseshock Acrcade game on scratch" / id="logo">
+<div class="GFG">  <div class="right"><img src="image/screenshot.png" alt="Fuseshock Acrcade game on scratch" / ></div>
        <p id="rcorners2"><a href="https://scratch.mit.edu/projects/844984046">Fuseshock Acrcade </a>(This is a game i have been working on for a long time.)</p>
-<img src="image/Screenshot 2024-02-27 215143.png" alt="Zack vs Carl made useing scratch" / id="logo">
+  <div class="right"><img src="image/Screenshot 2024-02-27 215143.png" alt="Zack vs Carl made useing scratch" /></div>
        <p class="p3" id="rcorners3"><a href="https://scratch.mit.edu/projects/813896715">Zack vs Carl</a>(this is the recent game i am working on)</p> 
 	   
 </div>	   
