--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ During my life, I had many experiences that made me who I am today. I like to do
     <li>Honors Digital media</li>
     </ul>
   <p><strong>My logo: </strong></p>
-<img src="image/Weridness.inc logo.png" alt="my personal logo" /id="logo2">
+<div class="left"><img src="image/Weridness.inc logo.png" alt="my personal logo" /></div>
 </div>
 </body>
 </html>
