--- a/page3.html
+++ b/page3.html
@@ -42,7 +42,7 @@
     </div>
 	<div class="RAN">
 	<h3><em>A picture of corn</em></h3>
-	<img src="image/corn.png" alt="it just corn" /id="logo">
+	<div class="left"><img src="image/corn.png" alt="it just corn" /></div>
 	</div>
 </body>
 </html>
